--- a/package.json
+++ b/package.json
@@ -48,13 +48,18 @@
     "date-fns": "^3.0.0",
     "embla-carousel-react": "^8.0.0",
     "input-otp": "^1.2.4",
+    "katex": "^0.16.25",
     "lucide-react": "^0.303.0",
     "next": "^14.2.33",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.49.3",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.10.3",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "vaul": "^0.7.9"
