--- a/workers/package.json
+++ b/workers/package.json
@@ -12,7 +12,9 @@
     "@google/genai": "^1.29.1",
     "@supabase/supabase-js": "^2.81.1",
     "express": "^4.18.2",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "bullmq": "^5.8.0",
+    "ioredis": "^5.4.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -22,4 +24,3 @@
     "typescript": "^5.5.3"
   }
 }
-
