--- a/workers/package.json
+++ b/workers/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "thesis-generation-worker",
-  "version": "1.0.0",
-  "description": "Background worker for thesis generation pipeline",
-  "main": "thesis-generation-worker.ts",
-  "scripts": {
-    "start": "tsx thesis-generation-worker.ts",
-    "dev": "tsx watch thesis-generation-worker.ts",
-    "build": "echo 'No build step required - using tsx to run TypeScript directly'"
-  },
-  "dependencies": {
-    "@google/genai": "^1.29.1",
-    "@supabase/supabase-js": "^2.81.1",
-    "express": "^4.18.2",
-    "node-fetch": "^2.7.0",
-    "bullmq": "^5.8.0",
-    "ioredis": "^5.4.1"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.14.10",
-    "@types/node-fetch": "^2.6.11",
-    "tsx": "^4.7.0",
-    "typescript": "^5.5.3"
-  }
+    "name": "thesis-worker",
+    "version": "1.0.0",
+    "description": "DSPy-based thesis generation worker with research pipeline",
+    "main": "dist/thesis-worker.js",
+    "scripts": {
+        "dev": "tsx watch thesis-worker.ts",
+        "build": "tsc",
+        "start": "node dist/thesis-worker.js",
+        "test": "jest"
+    },
+    "engines": {
+        "node": ">=18.0.0"
+    },
+    "dependencies": {
+        "@google/genai": "^0.3.0",
+        "@supabase/supabase-js": "^2.39.0",
+        "bullmq": "^5.0.0",
+        "ioredis": "^5.3.2"
+    },
+    "devDependencies": {
+        "@types/node": "^20.10.0",
+        "tsx": "^4.7.0",
+        "typescript": "^5.3.3"
+    }
 }
