--- a/workers/tsconfig.json
+++ b/workers/tsconfig.json
@@ -1,28 +1,25 @@
 {
-  "compilerOptions": {
-    "target": "ES2022",
-    "module": "commonjs",
-    "lib": [
-      "ES2022"
+    "compilerOptions": {
+        "target": "ES2022",
+        "module": "commonjs",
+        "lib": [
+            "ES2022"
+        ],
+        "outDir": "./dist",
+        "rootDir": "./",
+        "strict": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "resolveJsonModule": true,
+        "moduleResolution": "node"
+    },
+    "include": [
+        "**/*.ts"
     ],
-    "outDir": "./dist",
-    "rootDir": "..",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "moduleResolution": "node",
-    "types": [
-      "node"
+    "exclude": [
+        "node_modules",
+        "dist",
+        "python"
     ]
-  },
-  "include": [
-    "*.ts",
-    "../lib/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
 }
