--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next": "^14.2.33",
     "pandoc": "^0.2.0",
     "pandoc-binary": "^2.14.0",
+    "pdf-parse": "^2.4.5",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.3.1",
