--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.0.0",
     "docx": "^8.5.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.0.0",
     "gsap": "^3.13.0",
     "input-otp": "^1.2.4",
